appId: com.zane.zanebox
---
- launchApp:
    clearState: true
    permissions:
      all: allow
- runFlow:
    when:
      visible:
        id: com.android.permissioncontroller:id/permission_allow_button
    commands:
    - tapOn:
        id: com.android.permissioncontroller:id/permission_allow_button
- assertVisible:
    id: home_header
- tapOn:
    id: tab_2
- tapOn:
    id: settings_general
- tapOn:
    id: setting_appLanguage
- tapOn: 简体中文
- tapOn:
    id: page_back
- tapOn:
    id: main_back
- assertVisible: 暂无节点，点右上角添加节点或订阅
- takeScreenshot: reports/ui-1.0.2/current/nodes-empty
- tapOn:
    id: tab_2
- assertVisible: 全部设置
- takeScreenshot: reports/ui-1.0.2/current/settings
- tapOn:
    id: settings_general
- assertVisible: 软件设置
- tapOn:
    id: setting_uiSkin
- tapOn: 天青留白
- assertVisible: 天青留白
- takeScreenshot: reports/ui-1.0.2/current/azure-settings
- tapOn:
    id: setting_uiSkin
- tapOn: 光谱水晶
- assertVisible: 光谱水晶
- takeScreenshot: reports/ui-1.0.2/current/spectrum-settings
- tapOn:
    id: setting_uiSkin
- tapOn: 棱镜流光
- tapOn:
    id: setting_theme
- tapOn: 深色
- takeScreenshot: reports/ui-1.0.2/current/dark-settings
- tapOn:
    id: setting_theme
- tapOn: 浅色
- tapOn:
    id: page_back
- tapOn:
    id: main_back
- tapOn:
    id: tab_1
- assertVisible: 管理节点汇总组
- takeScreenshot: reports/ui-1.0.2/current/smart
- tapOn:
    id: main_back
- tapOn:
    id: add_nodes
- assertVisible: 手动添加
- takeScreenshot: reports/ui-1.0.2/current/add-menu
- back
